feature/about-me-page another changes

--- a/about.html
+++ b/about.html
@@ -11,5 +11,11 @@
     <p>
         I am a web developer. I am learning git and github. Github is a very useful tool for developers.
     </p>
+    <h1>
+        I am learning git and github
+    </h1>
+    <p>
+        I am learning git and github. Github is a very useful tool for developers. a quick brown fox jumps over the lazy dog.
+    </p>
 </body>
 </html>
