feature/about-me-page added Github features

--- a/about.html
+++ b/about.html
@@ -17,5 +17,22 @@
     <p>
         I am learning git and github. Github is a very useful tool for developers. a quick brown fox jumps over the lazy dog.
     </p>
+    <h2>
+        Github features
+    </h2>
+    <p>
+        <!--List down 10 github features-->
+        <ul>
+            <li>Version control</li>
+            <li>Issue tracking</li>
+            <li>Code review</li>
+            <li>Project management</li>
+            <li>Documentation</li>
+            <li>Continuous integration</li>
+            <li>Wiki</li>
+            <li>Hosting</li>
+            <li>Collaboration</li>
+            <li>Code hosting</li>
+    </p>
 </body>
 </html>
