feature/changing-index-page changes has been done

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Hello Github</h1>
+    <p>
+        index page is changed with some new text
+    </p>
+    <h5>Hello Index page</h5>
 </body>
 </html>
