--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p>
         index page is changed with some new text
     </p>
+    <p>
+        I have made the paragraph small as you requested
+    </p>
     <h5>Hello Index page</h5>
 </body>
 </html>
