syling has been added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <p>
         I have made the paragraph small as you requested
     </p>
+    <h2 style="border:1px solid black; font-size: 12px;">
+        Hello Index page
+    </h2>
     <h5>Hello Index page</h5>
 </body>
 </html>
