feature/changing-index-page
Page is refactored completely without loosing quality

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Github</h1>
-    <p>
-        index page is changed with some new text
-    </p>
-    <p>
-        I have made the paragraph small as you requested
-    </p>
-    <h2 style="border:1px solid black; font-size: 12px;">
-        Hello Index page
-    </h2>
-    <h5>Hello Index page</h5>
+    <!--Create index page with welcome and nice paragraph-->
+    <h1>Welcome to my website</h1>
+    <p>My name is <strong>John Doe</strong> and I am a web developer</p>
+    <p>I am a web developer and solution architect</p>
+    <!--Add a nice footer please-->
+    <footer>
+        <p>Thanks for visiting my website</p>
+    </footer>
 </body>
 </html>
