feature/changing-index-page
Page is optimised for tablet and mobile screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Add jumbotron-->
+    <div class="jumbotron">
+        <h1>My website</h1>
+        <p>My name is John Doe</p>
+    </div>
     <!--Create index page with welcome and nice paragraph-->
     <h1>Welcome to my website</h1>
     <p>My name is <strong>John Doe</strong> and I am a web developer</p>
